# halex_api

./: .flake8  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
src/halex_api/: api.py
tests/: test_api.py
