[tool.poetry]
name = "halex_api"
version = "0.1.0"
description = "halex api unofficial"
authors = ["kkanazaw <kkanazaw@designrule.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
pep8-naming = "^0.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
